# resume-toolkit

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  CLAUDE.md  CONTRIBUTING.md  QUALITY_GATES.md  README.md  coverage.xml  eslint.config.js  mypy.ini  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  tsconfig.json  vitest.config.ts
.claude/commands/: analyze-jd.md  application-dashboard.md  apply.md  generate-cover-letter.md  interview-prep.md  optimize-resume.md  parse-resume.md  research-company.md  score-ats.md  track-application.md
.github/workflows/: ci.yml  coverage-check.yml  lint.yml
.husky/: pre-commit
docs/: DATABASE_SCHEMA.md  DEVELOPMENT.md  TROUBLESHOOTING.md
docs/examples/: anecdote-example.md  base-resume.md  metadata-example.json
scripts/: check-coverage.js
src/cli/: index.ts
src/cli/__tests__/: index.test.ts
src/cli/__tests__/commands/: analyze-jd.test.ts  application-dashboard.test.ts  apply.test.ts  generate-cover-letter.test.ts  interview-prep.test.ts  optimize-resume.test.ts  research-company.test.ts  track-application.test.ts
src/cli/commands/: analyze-jd.ts  application-dashboard.ts  apply.ts  generate-cover-letter.ts  interview-prep.ts  optimize-resume.ts  parse-resume.ts  research-company.ts  score-ats.ts  track-application.ts
src/cli/commands/__tests__/: parse-resume.test.ts
src/cli/db/: client.ts  types.ts
src/cli/lib/: company-researcher.ts  jd-scraper.ts
src/python/: __init__.py
src/python/ats_scorer/: __init__.py  cli.py  models.py  scorer.py
src/python/company_analyzer/: __init__.py  analyzer.py
src/python/cover_letter_generator/: __init__.py  generator.py
src/python/cover_letter_generator/templates/: body_templates.py  closing_templates.py  opening_hooks.py
src/python/dashboard_generator/: __init__.py  generator.py
src/python/db/: QUICK_START.md  README.md  SCHEMA_DESIGN.md  __init__.py  client.py  models.py  schema.sql
src/python/db/migrations/: 001_initial_schema.sql
src/python/interview_prep_generator/: __init__.py  generator.py
src/python/jd_analyzer/: __init__.py  analyzer.py
src/python/pdf_parser/: README.md  __init__.py  cli.py  parser.py
src/python/resume_optimizer/: __init__.py  optimizer.py
src/python/tests/: __init__.py  conftest.py  test_ats_scorer.py  test_company_analyzer.py  test_cover_letter_generator.py  test_dashboard_generator.py  test_interview_prep_generator.py  test_jd_analyzer.py  test_pdf_parser.py  test_placeholder.py  test_resume_optimizer.py
src/python/tests/fixtures/: README.md  sample_jd.txt  sample_resume.md
